# bip32-pq-zkp

./: .gitignore  .golangci.yml  Makefile  README.md  batch_leaf_kind.go  batch_nested_test.go  batch_runner.go  batch_support.go  batch_types.go  claim_support.go  claim_support_test.go  doc.go  go.mod  go.sum  hardened_xpriv_claim_support.go  hardened_xpriv_runner.go  hardened_xpriv_types.go  hardened_xpriv_witness.go  hardened_xpub_claim_support.go  hardened_xpub_runner.go  hardened_xpub_types.go  hardened_xpub_witness.go  nested_plan.go  nested_plan_test.go  progress.md  runner.go  types.go  witness.go
.github/workflows/: go.yml
batchclaim/: claim.go  claim_test.go  envelope.go  merkle.go
bip32/: bip32.go  claim.go  extended.go  hardened_xpriv.go  hardened_xpub.go  taproot.go
cmd/bip32-pq-zkp-host/: batch.go  batch_test.go  hardened_xpriv.go  hardened_xpub.go  main.go  main_test.go  nested_plan.go
docs/: README.md  aggregation-design.md  batch-aggregation.md  batch-future-work.md  batch-merkle-system.md  claim.md  code-format.md  heterogeneous-parent-plan.md  mmr-accumulator-sketch.md  nested-batching.md  nested-wrapper-plan.md  recursion-batch-walkthrough.md  recursive-proving.md  reduced-variants.md  running.md  sparse-accumulator-plan.md
guest/: main.go
guest_batch/: main.go
guest_hardened_xpriv/: main.go
guest_hardened_xpub/: main.go
host/: Cargo.toml
host/src/: main.rs
hostcheck/: bip32_vector_test.go  extended_key_test.go
scripts/: install-custom-gcl.sh  local-custom-gcl.sh
