[package]
name = "bip32-pq-zkp-host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
borsh = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
risc0-zkvm = { path = "../../risc0/risc0/zkvm", default-features = false, features = ["prove"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
